--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>HTML Test Page Title</title>
+  </head>
+  <body>
+    <a></a>
+    <h1>This is heading1</h1>
+    <p>Mango</p>
+    <ul>
+    	<li>cute</li>
+    	<li>lazy</li>
+    	<li>smart</li>
+    </ul>
+    <h2>This is heading2</h2>
+    <h3>This is heading3</h3>
+  </body>
+</html>
 <!-- Write your HTML in this file -->
