--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>HTML Test Page Title</title>
   </head>
   <body>
-    <a href="https://flatironschool.com"></a>
+    <a href="https://flatironschool.com">Flatiron School</a>
   </body>
 </html>
